test/grammar/schema/var_not_define_fail/var_not_define_fail_0/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:11:9
   |
11 |         ccc > 2
   |         ^ name 'ccc' is not defined
   |